--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <version>3.13.2</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+		    <groupId>de.mkammerer</groupId>
+		    <artifactId>argon2-jvm</artifactId>
+		    <version>2.5</version>
+		</dependency>
 
     </dependencies>
 
